--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -6,7 +6,206 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import cv2\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[255, 255, 255],\n",
+       "        [255, 255, 255],\n",
+       "        [255, 255, 255],\n",
+       "        ...,\n",
+       "        [255, 255, 255],\n",
+       "        [255, 255, 255],\n",
+       "        [255, 255, 255]],\n",
+       "\n",
+       "       [[255, 255, 255],\n",
+       "        [255, 255, 255],\n",
+       "        [255, 255, 255],\n",
+       "        ...,\n",
+       "        [255, 255, 255],\n",
+       "        [255, 255, 255],\n",
+       "        [255, 255, 255]],\n",
+       "\n",
+       "       [[255, 255, 255],\n",
+       "        [255, 255, 255],\n",
+       "        [255, 255, 255],\n",
+       "        ...,\n",
+       "        [255, 255, 255],\n",
+       "        [255, 255, 255],\n",
+       "        [255, 255, 255]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[255, 255, 255],\n",
+       "        [255, 255, 255],\n",
+       "        [255, 255, 255],\n",
+       "        ...,\n",
+       "        [255, 255, 255],\n",
+       "        [255, 255, 255],\n",
+       "        [255, 255, 255]],\n",
+       "\n",
+       "       [[255, 255, 255],\n",
+       "        [255, 255, 255],\n",
+       "        [255, 255, 255],\n",
+       "        ...,\n",
+       "        [255, 255, 255],\n",
+       "        [255, 255, 255],\n",
+       "        [255, 255, 255]],\n",
+       "\n",
+       "       [[255, 255, 255],\n",
+       "        [255, 255, 255],\n",
+       "        [255, 255, 255],\n",
+       "        ...,\n",
+       "        [255, 255, 255],\n",
+       "        [255, 255, 255],\n",
+       "        [255, 255, 255]]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imagem = cv2.imread('img_test.png')\n",
+    "imagem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[255, 255, 255, ..., 255, 255, 255],\n",
+       "       [255, 255, 255, ..., 255, 255, 255],\n",
+       "       [255, 255, 255, ..., 255, 255, 255],\n",
+       "       ...,\n",
+       "       [255, 255, 255, ..., 255, 255, 255],\n",
+       "       [255, 255, 255, ..., 255, 255, 255],\n",
+       "       [255, 255, 255, ..., 255, 255, 255]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imagem_cinza = cv2.cvtColor(imagem, cv2.COLOR_BGR2GRAY)\n",
+    "imagem_cinza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[255, 255, 255, ..., 255, 255, 255],\n",
+       "       [255, 255, 255, ..., 255, 255, 255],\n",
+       "       [255, 255, 255, ..., 255, 255, 255],\n",
+       "       ...,\n",
+       "       [255, 255, 255, ..., 255, 255, 255],\n",
+       "       [255, 255, 255, ..., 255, 255, 255],\n",
+       "       [255, 255, 255, ..., 255, 255, 255]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imagem_equalizada = cv2.equalizeHist(imagem_cinza)\n",
+    "imagem_equalizada"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[255, 255, 255, ..., 255, 255, 255],\n",
+       "       [255, 255, 255, ..., 255, 255, 255],\n",
+       "       [255, 255, 255, ..., 255, 255, 255],\n",
+       "       ...,\n",
+       "       [255, 255, 255, ..., 255, 255, 255],\n",
+       "       [255, 255, 255, ..., 255, 255, 255],\n",
+       "       [255, 255, 255, ..., 255, 255, 255]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imagem_suavizada = cv2.GaussianBlur(imagem_equalizada, (5, 5), 0)\n",
+    "imagem_suavizada"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[255, 255, 255, ..., 255, 255, 255],\n",
+       "       [255, 255, 255, ..., 255, 255, 255],\n",
+       "       [255, 255, 255, ..., 255, 255, 255],\n",
+       "       ...,\n",
+       "       [255, 255, 255, ..., 255, 255, 255],\n",
+       "       [255, 255, 255, ..., 255, 255, 255],\n",
+       "       [255, 255, 255, ..., 255, 255, 255]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imagem_binarizada = cv2.threshold(imagem_suavizada, 0, 255, cv2.THRESH_BINARY + cv2.THRESH_OTSU)[1]\n",
+    "imagem_binarizada"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kernel = np.ones((2, 2), np.uint8)\n",
+    "imagem_erodida = cv2.erode(imagem_binarizada, kernel, iterations=1)\n",
+    "imagem_dilatada = cv2.dilate(imagem_binarizada, kernel, iterations=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contornos, _ = cv2.findContours(imagem_binarizada, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)"
    ]
   }
  ],
