ajustes nas legendas

--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -81,6 +81,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Converter a imagem para escala de cinza, pois o OCR geralmente funciona melhor com imagens em tons de cinza"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -105,6 +112,13 @@
    "source": [
     "imagem_cinza = cv2.cvtColor(imagem, cv2.COLOR_BGR2GRAY)\n",
     "imagem_cinza"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A equalização de histograma pode melhorar o contraste da imagem, tornando o texto mais nítido."
    ]
   },
   {
@@ -135,6 +149,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Filtros como Gaussian Blur e Median Blur podem ajudar a reduzir o ruído na imagem, tornando o texto mais claro."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -159,6 +180,13 @@
    "source": [
     "imagem_suavizada = cv2.GaussianBlur(imagem_equalizada, (5, 5), 0)\n",
     "imagem_suavizada"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A binarização divide a imagem em duas cores, preto e branco, tornando a separação entre o texto e o fundo mais nítida."
    ]
   },
   {
@@ -189,6 +217,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A erosão pode ser usada para reduzir a espessura do texto, enquanto a dilatação pode ser usada para engrossá-lo."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -197,6 +232,13 @@
     "kernel = np.ones((2, 2), np.uint8)\n",
     "imagem_erodida = cv2.erode(imagem_binarizada, kernel, iterations=1)\n",
     "imagem_dilatada = cv2.dilate(imagem_binarizada, kernel, iterations=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Em algumas imagens, pequenos componentes indesejados podem afetar o OCR. Você pode usar técnicas de análise de contornos para remover esses componentes."
    ]
   },
   {
